# caam

./: .env  Grid_PiPE.ipynb  agent_1.py  agent_2.py  agent_3.py  agent_4.py  covid.ipynb  dados_extraido.xlsx  dados_extraido_gemma3.xlsx  dados_extraido_llama3.2-vision.xlsx  dados_extraido_olmOCR.xlsx  dados_extraido_olmOCR_6bits.xlsx  dados_extraido_qwen2.5vl-3b.xlsx  list_pdf_files.py  ocr.py  pyproject.toml  text_util.py
dados/: auxilio_n_pesq.xlsx  funcionario.xlsx
